--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/fetch/node-sass-asset-functions",
   "dependencies": {
+    "async": "^1.4.2",
     "image-size": "^0.3.5",
     "node-sass": "^3.2.0"
   }
