--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "image-size": "^0.3.5",
     "mime": "^1.3.4",
     "node-sass": "^3.2.0"
+  },
+  "devDependencies": {
+    "jest": "^16.0.2"
   }
 }
