--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/fetch/node-sass-asset-functions",
   "dependencies": {
+    "deasync": "^0.1.8",
     "image-size": "^0.3.5",
     "mime": "^1.3.4",
     "node-sass": "^3.2.0"
