--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "dependencies": {
     "image-size": "^0.3.5",
     "mime": "^1.3.4",
-    "node-sass": "^3.2.0"
+    "node-sass": ">= 3.2 < 5"
   },
   "devDependencies": {
     "jest": "^16.0.2"
