--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-sass-asset-functions",
+  "name": "sass-asset-functions",
   "version": "0.1.0",
-  "description": "asset functions for node-sass",
+  "description": "asset functions for node-sass / dart-sass",
   "main": "index.js",
   "scripts": {
     "test": "jest"
@@ -29,10 +29,13 @@
   "homepage": "https://github.com/fetch/node-sass-asset-functions",
   "dependencies": {
     "image-size": "^0.3.5",
-    "mime": "^1.3.4",
-    "node-sass": ">= 3.2 < 5"
+    "mime": "^1.3.4"
+  },
+  "peerDependencies": {
+    "node-sass": ">= 3.2 < 5",
+    "sass": "*"
   },
   "devDependencies": {
-    "jest": "^16.0.2"
+    "jest": "^24.8.0"
   }
 }
