fix github workflow verify.yml syntax

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -23,4 +23,4 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - name: Run Lint and Test
-    - run: npm run lint && npm test
+      run: npm run lint && npm test
