add dart-sass interim branch

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -1,7 +1,7 @@
 name: Verify
 on:
   push:
-    branches: [ master ]
+    branches: [ master, dart-sass ]
   pull_request:
     branches: [ master ]
 
